Bug 110663 - SelectorChecker should not know about SelectorCheckerFastPath.
Summary: SelectorChecker should not know about SelectorCheckerFastPath.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dimitri Glazkov (Google)
URL:
Keywords:
Depends on:
Blocks: 89879
  Show dependency treegraph
 
Reported: 2013-02-22 16:52 PST by Dimitri Glazkov (Google)
Modified: 2013-02-23 22:20 PST (History)
8 users (show)

See Also:


Attachments
Patch (6.98 KB, patch)
2013-02-22 17:01 PST, Dimitri Glazkov (Google)
no flags Details | Formatted Diff | Diff
Patch for landing (8.48 KB, patch)
2013-02-23 10:14 PST, Dimitri Glazkov (Google)
no flags Details | Formatted Diff | Diff
Patch for landing (8.45 KB, patch)
2013-02-23 20:54 PST, Dimitri Glazkov (Google)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitri Glazkov (Google) 2013-02-22 16:52:28 PST
SelectorChecker should not know about SelectorCheckerFastPath.
Comment 1 Dimitri Glazkov (Google) 2013-02-22 17:01:16 PST
Created attachment 189868 [details]
Patch
Comment 2 Antti Koivisto 2013-02-23 04:00:39 PST
Comment on attachment 189868 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=189868&action=review

> Source/WebCore/css/SelectorChecker.cpp:77
> -bool SelectorChecker::matches(const CSSSelector* selector, Element* element, bool isFastCheckableSelector) const
> +bool SelectorChecker::matches(const CSSSelector* selector, Element* element) const
>  {
> -    if (isFastCheckableSelector && !element->isSVGElement()) {
> -        SelectorCheckerFastPath selectorCheckerFastPath(selector, element);
> -        if (!selectorCheckerFastPath.matchesRightmostSelector(VisitedMatchDisabled))
> -            return false;
> -        return selectorCheckerFastPath.matches();
> -    }
> -
>      PseudoId ignoreDynamicPseudo = NOPSEUDO;
>      return match(SelectorCheckingContext(selector, element, SelectorChecker::VisitedMatchDisabled), ignoreDynamicPseudo, DOMSiblingTraversalStrategy()) == SelectorMatches;
>  }

Maybe you should just remove this whole function? It does not serve much purpose anymore.
Comment 3 Dimitri Glazkov (Google) 2013-02-23 08:40:31 PST
(In reply to comment #2)
> Maybe you should just remove this whole function? It does not serve much purpose anymore.

Will do!
Comment 4 Dimitri Glazkov (Google) 2013-02-23 10:14:46 PST
Created attachment 189931 [details]
Patch for landing
Comment 5 WebKit Review Bot 2013-02-23 12:54:31 PST
Comment on attachment 189931 [details]
Patch for landing

Rejecting attachment 189931 [details] from commit-queue.

New failing tests:
fast/regions/region-style-color.html
Full output: http://queues.webkit.org/results/16718889
Comment 6 Dimitri Glazkov (Google) 2013-02-23 20:54:59 PST
Created attachment 189955 [details]
Patch for landing
Comment 7 WebKit Review Bot 2013-02-23 22:20:29 PST
Comment on attachment 189955 [details]
Patch for landing

Clearing flags on attachment: 189955

Committed r143858: <http://trac.webkit.org/changeset/143858>
Comment 8 WebKit Review Bot 2013-02-23 22:20:34 PST
All reviewed patches have been landed.  Closing bug.