SelectorChecker should not know about SelectorCheckerFastPath. https://bugs.webkit.org/show_bug.cgi?id=110663

Both SelectorChecker and it's speedy cousin unfortunately include each other.
Luckily, the particular way in which SelectorQuery uses SelectorChecker yields
to a fairly simple decoupling. Now only the cousin knows of SelectorChecker.

Reviewed by Antti Koivisto.

No new functionality, covered by existing tests.

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matches): Removed.
* css/SelectorChecker.h:
(SelectorChecker): Updated the decls to remove fast-path flag.
* dom/SelectorQuery.cpp:
(WebCore::SelectorDataList::selectorMatches): Added a helper just for SelectorQuery.
(WebCore::SelectorDataList::matches): Changed the callsite to use new helper.
(WebCore::SelectorDataList::execute): Ditto.
* dom/SelectorQuery.h:
(SelectorDataList): Updated decls.


Canonical link: https://commits.webkit.org/128981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143858 268f45cc-cd09-0410-ab3c-d52691b4dbfc